--- a/publiccode.yml
+++ b/publiccode.yml
@@ -114,4 +114,4 @@ platforms:
   - windows
 releaseDate: '2020-12-31'
 softwareType: standalone/web
-url: 'https://github.com/fvuoto/sil'
+url: 'https://github.com/arlav-er/sil'
