mod publiccode.yml

--- a/publiccode.yml
+++ b/publiccode.yml
@@ -1,8 +1,8 @@
-# This repository adheres to the publiccode.yml standard by including this 
+# This repository adheres to the publiccode.yml standard by including this
 # metadata file that makes public software easily discoverable.
 # More info at https://github.com/italia/publiccode.yml
 
-publiccodeYmlVersion: '0.2'
+publiccodeYmlVersion: "0.2"
 categories:
   - employee-management
   - appointment-scheduling
@@ -13,7 +13,7 @@ description:
       - Gestione anagrafica cittadino/azienda
       - Gestione amministrativa
       - Gestione Garanzia Giovani
-      - Gestione Politiche Attive – SAP – Assegno di ricollocazione – Reddito di Cittadinanza
+      - Gestione Politiche Attive - SAP - Assegno di ricollocazione - Reddito di Cittadinanza
       - Gestione flusso Politiche Attive verso SIFER
       - Rilascio certificati
       - Incontro domanda/offerta
@@ -26,9 +26,16 @@ description:
       - Gestione progetto formativo
       - Vetrina azienda
       - Offerte di lavoro e gestione candidature
-    genericName: SIL
+    genericName: SIL-ER
     longDescription: |2
-        Il Sistema Informativo Lavoro dell'_Agenzia Regionale per il Lavoro della Regione Emilia-Romagna_ è stato progettato e realizzato con l'obiettivo di attuare la riconversione del processo produttivo dei Servizi per l'Impiego, concepito e organizzato nel passato per produrre atti amministrativi, e oggi invece orientato all'erogazione di servizi ad alto contenuto professionale, integrati con le politiche attive del lavoro, attraverso la promozione e lo sviluppo di interventi di formazione e orientamento, di prevenzione della disoccupazione e di altri azioni mirate per le categorie più deboli e attraverso la riorganizzazione e qualificazione dei servizi per l'impiego decentrati.
+      Il Sistema Informativo Lavoro dell'Agenzia Regionale per il Lavoro della Regione Emilia-Romagna 
+      è stato progettato e realizzato con l'obiettivo di attuare la riconversione del processo produttivo 
+      dei Servizi per l'Impiego, concepito e organizzato nel passato per produrre atti amministrativi, 
+      e oggi invece orientato all'erogazione di servizi ad alto contenuto professionale, 
+      integrati con le politiche attive del lavoro, attraverso la promozione e lo sviluppo 
+      di interventi di formazione e orientamento, di prevenzione della disoccupazione e 
+      di altri azioni mirate per le categorie più deboli e attraverso la riorganizzazione 
+      e qualificazione dei servizi per l'impiego decentrati.
 
       Il sistema è stato concepito sulla base delle disposizioni normative ed è
       costantemente aggiornato e adeguato ai più recenti standard amministrativi
@@ -41,14 +48,14 @@ description:
       coinvolti.
 
 
-      Il Sistema Informativo Lavoro è composto da diversi strumenti che
+      Il Sistema Informativo Lavoro dell’Emilia-Romagna è composto da diversi strumenti che
       supportano gli operatori nella gestione degli utenti (lavoratori e
       aziende). Tale gestione si sviluppa in diversi sottosistemi integrati che
       agiscono sul fronte amministrativo e di servizio. I due sistemi principali
-      sono il SIL propriamente detto e il Portale LavoroperTe.
+      sono il SIL-ER e il Portale LavoroperTe.
 
 
-      Il **SIL **(**Sistema Informativo Lavoro**) è uno strumento di supporto
+      Il **SIL-ER ** (Sistema Informativo Lavoro dell'Emilia-Romagna) è uno strumento di supporto
       per operatori e operatrici dei** Centri per l'Impiego** nella gestione
       amministrativa, nell'erogazione delle informazioni e delle politiche
       attive alle persone e nell'erogazione di servizi alle imprese del proprio
@@ -72,8 +79,8 @@ description:
       Sono attivi inoltre scambi informativi con altri sistemi tra cui il
       sistema regionale della Formazione Professionale.
     shortDescription: |-
-      Il SIL è uno strumento di supporto agli operatori dei Centri per l'Impiego
-      ed un portale di servizi per il lavoro gestito dall'Agenzia per il Lavoro
+      Il SIL-ER è uno strumento di supporto agli operatori dei Centri per l'Impiego
+      ed un portale di servizi per il lavoro
 developmentStatus: stable
 intendedAudience:
   scope:
@@ -84,7 +91,7 @@ it:
     lineeGuidaDesign: false
     misureMinimeSicurezza: false
     modelloInteroperabilita: true
-  countryExtensionVersion: '0.2'
+  countryExtensionVersion: "0.2"
   piattaforme:
     anpr: false
     cie: true
@@ -102,16 +109,16 @@ maintenance:
   contacts:
     - email: stefano.camozzi@regione.emilia-romagna.it
       name: Stefano Camozzi
-      phone: '+390515273202'
+      phone: "+390515273202"
     - name: Stefano Camozzi
   contractors:
     - name: Stefano Camozzi
-      until: '2022-12-31'
+      until: "2022-12-31"
   type: internal
-name: Sistema Informativo del Lavoro
+name: Sistema Informativo Lavoro dell'Emilia-Romagna
 platforms:
   - linux
   - windows
-releaseDate: '2020-12-31'
+releaseDate: "2020-12-31"
 softwareType: standalone/web
-url: 'https://github.com/arlav-er/sil'
+url: "https://github.com/arlav-er/sil"
