mod publiccode.yml

--- a/publiccode.yml
+++ b/publiccode.yml
@@ -79,8 +79,8 @@ description:
       Sono attivi inoltre scambi informativi con altri sistemi tra cui il
       sistema regionale della Formazione Professionale.
     shortDescription: |-
-      Il SIL-ER è uno strumento di supporto agli operatori dei Centri per l'Impiego
-      ed un portale di servizi per il lavoro
+      Il SIL-ER è un sistema a supporto dei Centri per l'Impiego ed un portale 
+      di servizi on line dell’Agenzia Regionale per il Lavoro dell’Emilia-Romagna
 developmentStatus: stable
 intendedAudience:
   scope:
